Feat : 판매자 인증 로직 구현 전 사전 작업